--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -1,120 +1,89 @@
-.example-form {
-  min-width: 300px;
-  max-width: 800px;
-  margin: auto;
-  padding: 20px;
+
+form {
+  max-width: 700px;
+  margin: 0 auto;
+  padding: 10px;
+  background-color: #f9f9f9;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  background-color: #f9f9f9;
 }
 
-.example-full-width {
-  width: 100%;
-}
 
-table.example-full-width {
-  width: 100%;
+table {
+  width: 50%;
+  margin-bottom: 20px;
   border-collapse: separate;
-  border-spacing: 20px;
+  border-spacing: 15px;
 }
+
 
 td {
-  padding: 0 8px;
+  padding: 10px;
 }
 
-.example-container {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 10px;
-}
 
 mat-form-field {
-  width: 100%;
-  margin-bottom: 16px;
+  width: 70%;
 }
 
-mat-form-field mat-label {
-  font-weight: 400;
-  color: #333;
+
+mat-label {
+  font-weight: 500;
 }
 
-mat-form-field mat-error {
-  color: #f44336;
-}
 
-mat-select {
-  width: 100%;
-}
-
-mat-select .mat-select-trigger {
-  display: flex;
-  align-items: center;
-  padding: 8px;
-}
-
-mat-form-field textarea {
-  height: 100px;
-  resize: vertical;
-}
-
-input[matInput], 
-textarea[matInput] {
+input, textarea {
   font-size: 16px;
+  padding: 10px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  width: 100%;
 }
+
+
+textarea {
+  min-height: 100px;
+}
+
+
+mat-hint {
+  font-size: 12px;
+  color: #888;
+}
+
+mat-error {
+  color: #d32f2f;
+  font-size: 14px;
+}
+
 
 .button-container {
   display: flex;
-  justify-content: center; /* Center button horizontally */
-  margin-top: 20px;
+  justify-content: flex-end;
+  margin-top: 10px;
 }
 
-button.mat-raised-button {
-  background-color: #007bff;
-  color: #fff;
-  font-size: 16px;
-  padding: 10px 20px;
+
+button {
+  background-color: #0d0d0c;
+  color: white;
   border-radius: 4px;
-  text-transform: none;
+  padding: 10px 20px;
+  text-transform: uppercase;
+  font-weight: 500;
 }
 
-button.mat-raised-button:hover {
-  background-color: #0056b3;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+button:disabled {
+  background-color: #bdbdbd;
 }
 
-button.mat-icon-button {
-  color: #333;
-}
 
-mat-hint {
-  font-size: 14px;
-  color: #6c757d;
-}
-
-@media (max-width: 768px) {
-  .example-form {
-      padding: 10px;
+@media (max-width: 400px) {
+  table {
+    border-spacing: 10px;
   }
 
-  .example-container {
-      flex-direction: column;
-  }
-
-  .example-container mat-form-field {
-      margin-bottom: 16px;
-  }
-
-  .example-full-width {
-      width: 100%;
-  }
-
-  table.example-full-width {
-      display: block;
-  }
-
-  td {
-      display: block;
-      width: 100%;
-      margin-bottom: 16px;
+  mat-form-field {
+    width: 100%;
   }
 }
