--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -2,6 +2,7 @@
   <table class="example-full-width" cellspacing="0">
     <tr>
       <td>
+    
         <mat-form-field class="example-full-width">
           <mat-label>First name</mat-label>
           <input type="firstName" matInput formControlName="firstName" minlength="2" maxlength="10"
@@ -184,6 +185,6 @@
   </table>
 
   <div class="button-container">
-    <button mat-raised-button type="submit" >Submit</button>
+    <button mat-raised-button type="submit" [disabled]="form.invalid">Submit</button>
   </div>
 </form>
