LazyLodaing in form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,17 @@
+<h1>Lazy loading in angular 15 </h1>
+<ul>
+    <li>
+        <button type="button" routerLink="components/home">Home</button>
+    </li>
+    <li>
+        <button type="button" routerLink="components/contact">Contact</button>
+    </li>
+    <li>
+        <button type="button" routerLink="components/about">About</button>
+    </li>
+    <li>
+        <button type="button" routerLink="components/login">Login</button>
+    </li>
+</ul>
+
 <router-outlet></router-outlet>
