learn about the Authguarding

--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -3,7 +3,7 @@ form {
   max-width: 700px;
   margin: 0 auto;
   padding: 10px;
-  background-color: #462d63;
+  background-color: #868189;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(18, 164, 71, 0.1);
 }
