--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
         </li>
         <li>
             <button *ngIf="!isLoggedIn" type="button" [routerLink]="['/components/login']">Login</button>
-            <button *ngIf="isLoggedIn" type="button" (click)="logout()">Logout</button>
+            <button *ngIf="isLoggedIn" type="button" (click)="logout()">.jijh</button>
         </li>
     </ul>
 </nav>
